--- a/03_Lifetime_Value_Prediction.ipynb
+++ b/03_Lifetime_Value_Prediction.ipynb
@@ -9491,7 +9491,7 @@
    "source": [
     "Test score of 85% may sound good. However, our base model, the model that predicts every observations to be the majority class (0 in this example), will result in 85% accuracy score.\n",
     "\n",
-    "This is further expalined in the classification report. It says that if model tells us that the customer belongs to the clutser 0, it is 88 percent correct (precision). The model succussfully identifies 97% of actual cluster 0 customers (recall). \n",
+    "This is further explained in the classification report. It says that if model tells us that the customer belongs to the clutser 0, it is 88 percent correct (precision). The model successfully identifies 97% of actual cluster 0 customers (recall). \n",
     "\n",
     "However, we barely detect 15% of cluster 1 customer and it seems like none of the customers were classified to be cluster 2 customer. This makes sense becuase only about 1.3% of our customers in the trainset was cluster 2 customer."
    ]
