4th notebook markdown update

--- a/04_Churn_Prediction.ipynb
+++ b/04_Churn_Prediction.ipynb
@@ -2429,7 +2429,7 @@
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2523,7 +2523,7 @@
     "\n",
     "The first question can be answered by observing `P > |z|` column. This column presents the p-value for each column. This value represents the significance of the coefficient value for each features. If the absolute p-value is smaller than 0.05 (alpha value, significance level), the coefficient for the corresponding feature is significant.\n",
     "\n",
-    "2. **\"What are the most critical characteristics that keeps the customer stay?\"**\n",
+    "2. **\"What are the most critical characteristics that make the customer stay?\"**\n",
     "\n",
     "The second question can be answered by examining `coef` column. **Exponential of coef** is the expected change in Churn rate when the feature was changed by one unit. The exponential of coefficients is presented below."
    ]
