next purchase day prediction notebook update (markdown)

--- a/05_Next_Purchase_Day_Prediction.ipynb
+++ b/05_Next_Purchase_Day_Prediction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Next Purchase Day\n",
     "\n",
-    "Predictive analytics in business helps us **treat the customers in a way they deserve before they expect that (e.g. LTV prediction) and act before something bad happends (e.g. churn)**. Knowing the next purchase day of a customer helps us do these. If a customer is expected to make a purchase, no promotional offer is needed because the customer will make a purchase anyways. If a customer is not expected to make any purchase, we can nudge the customer with inbound marketing.\n",
+    "Predictive analytics in business helps us **treat the customers in a way they deserve before they expect that (e.g. LTV prediction) and act before something bad happens (e.g. churn)**. Knowing the next purchase day of a customer helps us do these. If a customer is expected to make a purchase, no promotional offer is needed because the customer will make a purchase anyways. If a customer is not expected to make any purchase, we can nudge the customer with inbound marketing.\n",
     "\n",
     "In this notebook, I will predict next purchase day of customers for an online retail store by following steps.\n",
     "1. [Data Wrangling](#first)\n",
